fixed profile directory spacing (#2832)

--- a/source/sass/wagtail/profiles.scss
+++ b/source/sass/wagtail/profiles.scss
@@ -38,14 +38,15 @@
 }
 
 .person-card {
-  border-top: 0.0625rem solid black;
+  border-top: 1px solid black;
   display: grid;
   grid-template-rows: repeat(2, 0.25fr);
   grid-template-columns: 1fr 2fr;
 
   @media screen and (min-width: $bp-sm) {
-    grid-template-rows: repeat(3, 0.25fr);
+    grid-template-rows: 0.5fr 0.75fr;
     grid-template-columns: 0.9fr 2fr;
+    min-height: 160px;
   }
 }
 
